--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <a class="btn-primary" href="#contact">Let’s Get Started &rsaquo;</a>
       </div>
       <div class="hero-image">
-        <img src="images/profile.jpg" alt="Balaji Kumar Varma G">
+        <img src="balajipicture.jpg" alt="Balaji Kumar Varma G">
       </div>
     </div>
   </section>
