--- a/index.html
+++ b/index.html
@@ -27,11 +27,17 @@
         <li><a href="#">Recent Work</a></li>
         <li><a class="btn-contact" href="#">Get In Touch</a></li>
       </ul>
-      <div class="social-icons">
-        <a href="#"><i class="fab fa-twitter"></i></a>
-        <a href="#"><i class="fab fa-linkedin-in"></i></a>
-        <a href="#"><i class="fab fa-github"></i></a>
-      </div>
+     <div class="social-icons">
+  <!-- LinkedIn -->
+  <a href="https://www.linkedin.com/in/balaji-kumar-varma-g-967656281/" target="_blank" rel="noopener">
+    <i class="fab fa-linkedin-in"></i>
+  </a>
+  <!-- GitHub -->
+  <a href="https://github.com/gbalaji036" target="_blank" rel="noopener">
+    <i class="fab fa-github"></i>
+  </a>
+</div>
+
     </div>
   </nav>
 
